The user is not marked as registered when we sent him 2 invitations